parser.output
Terminals unused in grammar

    SHORT
    LONG
    SIGNED
    UNSIGNED
    DOUBLE
    SWITCH
    DO
    FOR


Grammar

    0 $accept: translation_unit $end

    1 expression: ID
    2           | FLOAT_VAL
    3           | INT_VAL
    4           | STR_VAL
    5           | CHAR_VAL
    6           | LPAR expression RPAR
    7           | expression LBRAC expression RBRAC
    8           | expression LPAR RPAR
    9           | expression LPAR argument_expression_list RPAR
   10           | expression INC
   11           | expression DEC
   12           | INC expression
   13           | DEC expression
   14           | unary_operator expression
   15           | SIZEOF expression
   16           | SIZEOF LPAR type_name RPAR
   17           | LPAR type_name RPAR expression
   18           | expression TIMES expression
   19           | expression OVER expression
   20           | expression PERCENT expression
   21           | expression PLUS expression
   22           | expression MINUS expression
   23           | expression LT expression
   24           | expression GT expression
   25           | expression LT_EQ expression
   26           | expression GT_EQ expression
   27           | expression EQ expression
   28           | expression N_EQ expression
   29           | expression L_AND expression
   30           | expression L_OR expression
   31           | expression ASGN expression
   32           | expression T_ASGN expression
   33           | expression O_ASGN expression
   34           | expression MOD_ASGN expression
   35           | expression PL_ASGN expression
   36           | expression M_ASGN expression

   37 argument_expression_list: expression
   38                         | argument_expression_list COMMA expression

   39 unary_operator: AMPER
   40               | PLUS
   41               | MINUS
   42               | L_NOT

   43 declaration: declaration_specifiers SEMI
   44            | declaration_specifiers init_declarator_list SEMI

   45 declaration_specifiers: type_specifier
   46                       | type_specifier declaration_specifiers

   47 init_declarator_list: init_declarator
   48                     | init_declarator_list COMMA init_declarator

   49 init_declarator: declarator
   50                | declarator ASGN initializer

   51 type_specifier: VOID
   52               | CHAR
   53               | INT
   54               | FLOAT

   55 specifier_qualifier_list: type_specifier specifier_qualifier_list
   56                         | type_specifier

   57 declarator: ID
   58           | LPAR declarator RPAR
   59           | declarator LBRAC expression RBRAC
   60           | declarator LBRAC RBRAC
   61           | declarator LPAR parameter_list RPAR
   62           | declarator LPAR identifier_list RPAR
   63           | declarator LPAR RPAR

   64 function_declarator: ID
   65                    | LPAR function_declarator RPAR
   66                    | function_declarator LBRAC expression RBRAC
   67                    | function_declarator LBRAC RBRAC
   68                    | function_declarator LPAR parameter_list RPAR
   69                    | function_declarator LPAR identifier_list RPAR
   70                    | function_declarator LPAR RPAR

   71 parameter_list: parameter_declaration
   72               | parameter_list COMMA parameter_declaration

   73 parameter_declaration: declaration_specifiers declarator
   74                      | declaration_specifiers abstract_declarator
   75                      | declaration_specifiers

   76 identifier_list: ID
   77                | identifier_list COMMA ID

   78 type_name: specifier_qualifier_list
   79          | specifier_qualifier_list abstract_declarator

   80 abstract_declarator: LPAR abstract_declarator RPAR
   81                    | LBRAC RBRAC
   82                    | LBRAC expression RBRAC
   83                    | abstract_declarator LBRAC RBRAC
   84                    | abstract_declarator LBRAC expression RBRAC
   85                    | LPAR RPAR
   86                    | LPAR parameter_list RPAR
   87                    | abstract_declarator LPAR RPAR
   88                    | abstract_declarator LPAR parameter_list RPAR

   89 initializer: expression
   90            | LCURLY initializer_list RCURLY
   91            | LCURLY initializer_list COMMA RCURLY

   92 initializer_list: initializer
   93                 | initializer_list COMMA initializer

   94 statement: labeled_statement
   95          | compound_statement
   96          | expression_statement
   97          | selection_statement
   98          | iteration_statement
   99          | jump_statement

  100 labeled_statement: ID COLON statement
  101                  | CASE expression COLON statement
  102                  | DEFAULT COLON statement

  103 compound_statement: LCURLY RCURLY
  104                   | LCURLY statement_list RCURLY
  105                   | LCURLY declaration_list RCURLY
  106                   | LCURLY declaration_list statement_list RCURLY

  107 declaration_list: declaration
  108                 | declaration_list declaration

  109 statement_list: statement
  110               | statement_list statement

  111 expression_statement: SEMI
  112                     | expression SEMI

  113 selection_statement: IF LPAR expression RPAR compound_statement
  114                    | IF LPAR expression RPAR compound_statement ELSE compound_statement

  115 iteration_statement: WHILE LPAR expression RPAR statement

  116 jump_statement: GOTO ID SEMI
  117               | CONTINUE SEMI
  118               | BREAK SEMI
  119               | RETURN SEMI
  120               | RETURN expression SEMI

  121 translation_unit: external_declaration
  122                 | translation_unit external_declaration

  123 external_declaration: function_definition

  124 function_definition: declaration_specifiers function_declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INC (258) 10 12
    DEC (259) 11 13
    LT_EQ (260) 25
    GT_EQ (261) 26
    LT (262) 23
    GT (263) 24
    EQ (264) 27
    N_EQ (265) 28
    L_NOT (266) 42
    L_AND (267) 29
    L_OR (268) 30
    ASGN (269) 31 50
    T_ASGN (270) 32
    O_ASGN (271) 33
    MOD_ASGN (272) 34
    PL_ASGN (273) 35
    M_ASGN (274) 36
    CHAR (275) 52
    SHORT (276)
    INT (277) 53
    LONG (278)
    SIGNED (279)
    UNSIGNED (280)
    FLOAT (281) 54
    DOUBLE (282)
    VOID (283) 51
    CASE (284) 101
    DEFAULT (285) 102
    IF (286) 113 114
    ELSE (287) 114
    SWITCH (288)
    WHILE (289) 115
    DO (290)
    FOR (291)
    GOTO (292) 116
    CONTINUE (293) 117
    BREAK (294) 118
    RETURN (295) 119 120
    ID (296) 1 57 64 76 77 100 116
    FLOAT_VAL (297) 2
    INT_VAL (298) 3
    STR_VAL (299) 4
    CHAR_VAL (300) 5
    SIZEOF (301) 15 16
    PLUS (302) 21 40
    MINUS (303) 22 41
    TIMES (304) 18
    OVER (305) 19
    PERCENT (306) 20
    LPAR (307) 6 8 9 16 17 58 61 62 63 65 68 69 70 80 85 86 87 88 113 114 115
    RPAR (308) 6 8 9 16 17 58 61 62 63 65 68 69 70 80 85 86 87 88 113 114 115
    LCURLY (309) 90 91 103 104 105 106
    RCURLY (310) 90 91 103 104 105 106
    LBRAC (311) 7 59 60 66 67 81 82 83 84
    RBRAC (312) 7 59 60 66 67 81 82 83 84
    SEMI (313) 43 44 111 112 116 117 118 119 120
    COMMA (314) 38 48 72 77 91 93
    AMPER (315) 39
    COLON (316) 100 101 102
    UMINUS (317)


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    expression (64)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 6 7 8 9 10 11 12 13 14 15 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 59 66 82 84 89 101 112 113 114 115 120
    argument_expression_list (65)
        on left: 37 38
        on right: 9 38
    unary_operator (66)
        on left: 39 40 41 42
        on right: 14
    declaration (67)
        on left: 43 44
        on right: 107 108
    declaration_specifiers (68)
        on left: 45 46
        on right: 43 44 46 73 74 75 124
    init_declarator_list (69)
        on left: 47 48
        on right: 44 48
    init_declarator (70)
        on left: 49 50
        on right: 47 48
    type_specifier (71)
        on left: 51 52 53 54
        on right: 45 46 55 56
    specifier_qualifier_list (72)
        on left: 55 56
        on right: 55 78 79
    declarator (73)
        on left: 57 58 59 60 61 62 63
        on right: 49 50 58 59 60 61 62 63 73
    function_declarator (74)
        on left: 64 65 66 67 68 69 70
        on right: 65 66 67 68 69 70 124
    parameter_list (75)
        on left: 71 72
        on right: 61 68 72 86 88
    parameter_declaration (76)
        on left: 73 74 75
        on right: 71 72
    identifier_list (77)
        on left: 76 77
        on right: 62 69 77
    type_name (78)
        on left: 78 79
        on right: 16 17
    abstract_declarator (79)
        on left: 80 81 82 83 84 85 86 87 88
        on right: 74 79 80 83 84 87 88
    initializer (80)
        on left: 89 90 91
        on right: 50 92 93
    initializer_list (81)
        on left: 92 93
        on right: 90 91 93
    statement (82)
        on left: 94 95 96 97 98 99
        on right: 100 101 102 109 110 115
    labeled_statement (83)
        on left: 100 101 102
        on right: 94
    compound_statement (84)
        on left: 103 104 105 106
        on right: 95 113 114 124
    declaration_list (85)
        on left: 107 108
        on right: 105 106 108
    statement_list (86)
        on left: 109 110
        on right: 104 106 110
    expression_statement (87)
        on left: 111 112
        on right: 96
    selection_statement (88)
        on left: 113 114
        on right: 97
    iteration_statement (89)
        on left: 115
        on right: 98
    jump_statement (90)
        on left: 116 117 118 119 120
        on right: 99
    translation_unit (91)
        on left: 121 122
        on right: 0 122
    external_declaration (92)
        on left: 123
        on right: 121 122
    function_definition (93)
        on left: 124
        on right: 123


State 0

    0 $accept: . translation_unit $end

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    declaration_specifiers  go to state 5
    type_specifier          go to state 6
    translation_unit        go to state 7
    external_declaration    go to state 8
    function_definition     go to state 9


State 1

   52 type_specifier: CHAR .

    $default  reduce using rule 52 (type_specifier)


State 2

   53 type_specifier: INT .

    $default  reduce using rule 53 (type_specifier)


State 3

   54 type_specifier: FLOAT .

    $default  reduce using rule 54 (type_specifier)


State 4

   51 type_specifier: VOID .

    $default  reduce using rule 51 (type_specifier)


State 5

  124 function_definition: declaration_specifiers . function_declarator compound_statement

    ID    shift, and go to state 10
    LPAR  shift, and go to state 11

    function_declarator  go to state 12


State 6

   45 declaration_specifiers: type_specifier .
   46                       | type_specifier . declaration_specifiers

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 45 (declaration_specifiers)

    declaration_specifiers  go to state 13
    type_specifier          go to state 6


State 7

    0 $accept: translation_unit . $end
  122 translation_unit: translation_unit . external_declaration

    $end   shift, and go to state 14
    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    declaration_specifiers  go to state 5
    type_specifier          go to state 6
    external_declaration    go to state 15
    function_definition     go to state 9


State 8

  121 translation_unit: external_declaration .

    $default  reduce using rule 121 (translation_unit)


State 9

  123 external_declaration: function_definition .

    $default  reduce using rule 123 (external_declaration)


State 10

   64 function_declarator: ID .

    $default  reduce using rule 64 (function_declarator)


State 11

   65 function_declarator: LPAR . function_declarator RPAR

    ID    shift, and go to state 10
    LPAR  shift, and go to state 11

    function_declarator  go to state 16


State 12

   66 function_declarator: function_declarator . LBRAC expression RBRAC
   67                    | function_declarator . LBRAC RBRAC
   68                    | function_declarator . LPAR parameter_list RPAR
   69                    | function_declarator . LPAR identifier_list RPAR
   70                    | function_declarator . LPAR RPAR
  124 function_definition: declaration_specifiers function_declarator . compound_statement

    LPAR    shift, and go to state 17
    LCURLY  shift, and go to state 18
    LBRAC   shift, and go to state 19

    compound_statement  go to state 20


State 13

   46 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 46 (declaration_specifiers)


State 14

    0 $accept: translation_unit $end .

    $default  accept


State 15

  122 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 122 (translation_unit)


State 16

   65 function_declarator: LPAR function_declarator . RPAR
   66                    | function_declarator . LBRAC expression RBRAC
   67                    | function_declarator . LBRAC RBRAC
   68                    | function_declarator . LPAR parameter_list RPAR
   69                    | function_declarator . LPAR identifier_list RPAR
   70                    | function_declarator . LPAR RPAR

    LPAR   shift, and go to state 17
    RPAR   shift, and go to state 21
    LBRAC  shift, and go to state 19


State 17

   68 function_declarator: function_declarator LPAR . parameter_list RPAR
   69                    | function_declarator LPAR . identifier_list RPAR
   70                    | function_declarator LPAR . RPAR

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    ID     shift, and go to state 22
    RPAR   shift, and go to state 23

    declaration_specifiers  go to state 24
    type_specifier          go to state 6
    parameter_list          go to state 25
    parameter_declaration   go to state 26
    identifier_list         go to state 27


State 18

  103 compound_statement: LCURLY . RCURLY
  104                   | LCURLY . statement_list RCURLY
  105                   | LCURLY . declaration_list RCURLY
  106                   | LCURLY . declaration_list statement_list RCURLY

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    CHAR       shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    CASE       shift, and go to state 31
    DEFAULT    shift, and go to state 32
    IF         shift, and go to state 33
    WHILE      shift, and go to state 34
    GOTO       shift, and go to state 35
    CONTINUE   shift, and go to state 36
    BREAK      shift, and go to state 37
    RETURN     shift, and go to state 38
    ID         shift, and go to state 39
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    LCURLY     shift, and go to state 18
    RCURLY     shift, and go to state 48
    SEMI       shift, and go to state 49
    AMPER      shift, and go to state 50

    expression              go to state 51
    unary_operator          go to state 52
    declaration             go to state 53
    declaration_specifiers  go to state 54
    type_specifier          go to state 6
    statement               go to state 55
    labeled_statement       go to state 56
    compound_statement      go to state 57
    declaration_list        go to state 58
    statement_list          go to state 59
    expression_statement    go to state 60
    selection_statement     go to state 61
    iteration_statement     go to state 62
    jump_statement          go to state 63


State 19

   66 function_declarator: function_declarator LBRAC . expression RBRAC
   67                    | function_declarator LBRAC . RBRAC

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    RBRAC      shift, and go to state 65
    AMPER      shift, and go to state 50

    expression      go to state 66
    unary_operator  go to state 52


State 20

  124 function_definition: declaration_specifiers function_declarator compound_statement .

    $default  reduce using rule 124 (function_definition)


State 21

   65 function_declarator: LPAR function_declarator RPAR .

    $default  reduce using rule 65 (function_declarator)


State 22

   76 identifier_list: ID .

    $default  reduce using rule 76 (identifier_list)


State 23

   70 function_declarator: function_declarator LPAR RPAR .

    $default  reduce using rule 70 (function_declarator)


State 24

   73 parameter_declaration: declaration_specifiers . declarator
   74                      | declaration_specifiers . abstract_declarator
   75                      | declaration_specifiers .

    ID     shift, and go to state 67
    LPAR   shift, and go to state 68
    LBRAC  shift, and go to state 69

    $default  reduce using rule 75 (parameter_declaration)

    declarator           go to state 70
    abstract_declarator  go to state 71


State 25

   68 function_declarator: function_declarator LPAR parameter_list . RPAR
   72 parameter_list: parameter_list . COMMA parameter_declaration

    RPAR   shift, and go to state 72
    COMMA  shift, and go to state 73


State 26

   71 parameter_list: parameter_declaration .

    $default  reduce using rule 71 (parameter_list)


State 27

   69 function_declarator: function_declarator LPAR identifier_list . RPAR
   77 identifier_list: identifier_list . COMMA ID

    RPAR   shift, and go to state 74
    COMMA  shift, and go to state 75


State 28

   12 expression: INC . expression

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    AMPER      shift, and go to state 50

    expression      go to state 76
    unary_operator  go to state 52


State 29

   13 expression: DEC . expression

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    AMPER      shift, and go to state 50

    expression      go to state 77
    unary_operator  go to state 52


State 30

   42 unary_operator: L_NOT .

    $default  reduce using rule 42 (unary_operator)


State 31

  101 labeled_statement: CASE . expression COLON statement

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    AMPER      shift, and go to state 50

    expression      go to state 78
    unary_operator  go to state 52


State 32

  102 labeled_statement: DEFAULT . COLON statement

    COLON  shift, and go to state 79


State 33

  113 selection_statement: IF . LPAR expression RPAR compound_statement
  114                    | IF . LPAR expression RPAR compound_statement ELSE compound_statement

    LPAR  shift, and go to state 80


State 34

  115 iteration_statement: WHILE . LPAR expression RPAR statement

    LPAR  shift, and go to state 81


State 35

  116 jump_statement: GOTO . ID SEMI

    ID  shift, and go to state 82


State 36

  117 jump_statement: CONTINUE . SEMI

    SEMI  shift, and go to state 83


State 37

  118 jump_statement: BREAK . SEMI

    SEMI  shift, and go to state 84


State 38

  119 jump_statement: RETURN . SEMI
  120               | RETURN . expression SEMI

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    SEMI       shift, and go to state 85
    AMPER      shift, and go to state 50

    expression      go to state 86
    unary_operator  go to state 52


State 39

    1 expression: ID .
  100 labeled_statement: ID . COLON statement

    COLON  shift, and go to state 87

    $default  reduce using rule 1 (expression)


State 40

    2 expression: FLOAT_VAL .

    $default  reduce using rule 2 (expression)


State 41

    3 expression: INT_VAL .

    $default  reduce using rule 3 (expression)


State 42

    4 expression: STR_VAL .

    $default  reduce using rule 4 (expression)


State 43

    5 expression: CHAR_VAL .

    $default  reduce using rule 5 (expression)


State 44

   15 expression: SIZEOF . expression
   16           | SIZEOF . LPAR type_name RPAR

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 88
    AMPER      shift, and go to state 50

    expression      go to state 89
    unary_operator  go to state 52


State 45

   40 unary_operator: PLUS .

    $default  reduce using rule 40 (unary_operator)


State 46

   41 unary_operator: MINUS .

    $default  reduce using rule 41 (unary_operator)


State 47

    6 expression: LPAR . expression RPAR
   17           | LPAR . type_name RPAR expression

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    CHAR       shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    AMPER      shift, and go to state 50

    expression                go to state 90
    unary_operator            go to state 52
    type_specifier            go to state 91
    specifier_qualifier_list  go to state 92
    type_name                 go to state 93


State 48

  103 compound_statement: LCURLY RCURLY .

    $default  reduce using rule 103 (compound_statement)


State 49

  111 expression_statement: SEMI .

    $default  reduce using rule 111 (expression_statement)


State 50

   39 unary_operator: AMPER .

    $default  reduce using rule 39 (unary_operator)


State 51

    7 expression: expression . LBRAC expression RBRAC
    8           | expression . LPAR RPAR
    9           | expression . LPAR argument_expression_list RPAR
   10           | expression . INC
   11           | expression . DEC
   18           | expression . TIMES expression
   19           | expression . OVER expression
   20           | expression . PERCENT expression
   21           | expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . LT expression
   24           | expression . GT expression
   25           | expression . LT_EQ expression
   26           | expression . GT_EQ expression
   27           | expression . EQ expression
   28           | expression . N_EQ expression
   29           | expression . L_AND expression
   30           | expression . L_OR expression
   31           | expression . ASGN expression
   32           | expression . T_ASGN expression
   33           | expression . O_ASGN expression
   34           | expression . MOD_ASGN expression
   35           | expression . PL_ASGN expression
   36           | expression . M_ASGN expression
  112 expression_statement: expression . SEMI

    INC       shift, and go to state 94
    DEC       shift, and go to state 95
    LT_EQ     shift, and go to state 96
    GT_EQ     shift, and go to state 97
    LT        shift, and go to state 98
    GT        shift, and go to state 99
    EQ        shift, and go to state 100
    N_EQ      shift, and go to state 101
    L_AND     shift, and go to state 102
    L_OR      shift, and go to state 103
    ASGN      shift, and go to state 104
    T_ASGN    shift, and go to state 105
    O_ASGN    shift, and go to state 106
    MOD_ASGN  shift, and go to state 107
    PL_ASGN   shift, and go to state 108
    M_ASGN    shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    TIMES     shift, and go to state 112
    OVER      shift, and go to state 113
    PERCENT   shift, and go to state 114
    LPAR      shift, and go to state 115
    LBRAC     shift, and go to state 116
    SEMI      shift, and go to state 117


State 52

   14 expression: unary_operator . expression

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    AMPER      shift, and go to state 50

    expression      go to state 118
    unary_operator  go to state 52


State 53

  107 declaration_list: declaration .

    $default  reduce using rule 107 (declaration_list)


State 54

   43 declaration: declaration_specifiers . SEMI
   44            | declaration_specifiers . init_declarator_list SEMI

    ID    shift, and go to state 67
    LPAR  shift, and go to state 119
    SEMI  shift, and go to state 120

    init_declarator_list  go to state 121
    init_declarator       go to state 122
    declarator            go to state 123


State 55

  109 statement_list: statement .

    $default  reduce using rule 109 (statement_list)


State 56

   94 statement: labeled_statement .

    $default  reduce using rule 94 (statement)


State 57

   95 statement: compound_statement .

    $default  reduce using rule 95 (statement)


State 58

  105 compound_statement: LCURLY declaration_list . RCURLY
  106                   | LCURLY declaration_list . statement_list RCURLY
  108 declaration_list: declaration_list . declaration

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    CHAR       shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    VOID       shift, and go to state 4
    CASE       shift, and go to state 31
    DEFAULT    shift, and go to state 32
    IF         shift, and go to state 33
    WHILE      shift, and go to state 34
    GOTO       shift, and go to state 35
    CONTINUE   shift, and go to state 36
    BREAK      shift, and go to state 37
    RETURN     shift, and go to state 38
    ID         shift, and go to state 39
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    LCURLY     shift, and go to state 18
    RCURLY     shift, and go to state 124
    SEMI       shift, and go to state 49
    AMPER      shift, and go to state 50

    expression              go to state 51
    unary_operator          go to state 52
    declaration             go to state 125
    declaration_specifiers  go to state 54
    type_specifier          go to state 6
    statement               go to state 55
    labeled_statement       go to state 56
    compound_statement      go to state 57
    statement_list          go to state 126
    expression_statement    go to state 60
    selection_statement     go to state 61
    iteration_statement     go to state 62
    jump_statement          go to state 63


State 59

  104 compound_statement: LCURLY statement_list . RCURLY
  110 statement_list: statement_list . statement

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    CASE       shift, and go to state 31
    DEFAULT    shift, and go to state 32
    IF         shift, and go to state 33
    WHILE      shift, and go to state 34
    GOTO       shift, and go to state 35
    CONTINUE   shift, and go to state 36
    BREAK      shift, and go to state 37
    RETURN     shift, and go to state 38
    ID         shift, and go to state 39
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    LCURLY     shift, and go to state 18
    RCURLY     shift, and go to state 127
    SEMI       shift, and go to state 49
    AMPER      shift, and go to state 50

    expression            go to state 51
    unary_operator        go to state 52
    statement             go to state 128
    labeled_statement     go to state 56
    compound_statement    go to state 57
    expression_statement  go to state 60
    selection_statement   go to state 61
    iteration_statement   go to state 62
    jump_statement        go to state 63


State 60

   96 statement: expression_statement .

    $default  reduce using rule 96 (statement)


State 61

   97 statement: selection_statement .

    $default  reduce using rule 97 (statement)


State 62

   98 statement: iteration_statement .

    $default  reduce using rule 98 (statement)


State 63

   99 statement: jump_statement .

    $default  reduce using rule 99 (statement)


State 64

    1 expression: ID .

    $default  reduce using rule 1 (expression)


State 65

   67 function_declarator: function_declarator LBRAC RBRAC .

    $default  reduce using rule 67 (function_declarator)


State 66

    7 expression: expression . LBRAC expression RBRAC
    8           | expression . LPAR RPAR
    9           | expression . LPAR argument_expression_list RPAR
   10           | expression . INC
   11           | expression . DEC
   18           | expression . TIMES expression
   19           | expression . OVER expression
   20           | expression . PERCENT expression
   21           | expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . LT expression
   24           | expression . GT expression
   25           | expression . LT_EQ expression
   26           | expression . GT_EQ expression
   27           | expression . EQ expression
   28           | expression . N_EQ expression
   29           | expression . L_AND expression
   30           | expression . L_OR expression
   31           | expression . ASGN expression
   32           | expression . T_ASGN expression
   33           | expression . O_ASGN expression
   34           | expression . MOD_ASGN expression
   35           | expression . PL_ASGN expression
   36           | expression . M_ASGN expression
   66 function_declarator: function_declarator LBRAC expression . RBRAC

    INC       shift, and go to state 94
    DEC       shift, and go to state 95
    LT_EQ     shift, and go to state 96
    GT_EQ     shift, and go to state 97
    LT        shift, and go to state 98
    GT        shift, and go to state 99
    EQ        shift, and go to state 100
    N_EQ      shift, and go to state 101
    L_AND     shift, and go to state 102
    L_OR      shift, and go to state 103
    ASGN      shift, and go to state 104
    T_ASGN    shift, and go to state 105
    O_ASGN    shift, and go to state 106
    MOD_ASGN  shift, and go to state 107
    PL_ASGN   shift, and go to state 108
    M_ASGN    shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    TIMES     shift, and go to state 112
    OVER      shift, and go to state 113
    PERCENT   shift, and go to state 114
    LPAR      shift, and go to state 115
    LBRAC     shift, and go to state 116
    RBRAC     shift, and go to state 129


State 67

   57 declarator: ID .

    $default  reduce using rule 57 (declarator)


State 68

   58 declarator: LPAR . declarator RPAR
   80 abstract_declarator: LPAR . abstract_declarator RPAR
   85                    | LPAR . RPAR
   86                    | LPAR . parameter_list RPAR

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    ID     shift, and go to state 67
    LPAR   shift, and go to state 68
    RPAR   shift, and go to state 130
    LBRAC  shift, and go to state 69

    declaration_specifiers  go to state 24
    type_specifier          go to state 6
    declarator              go to state 131
    parameter_list          go to state 132
    parameter_declaration   go to state 26
    abstract_declarator     go to state 133


State 69

   81 abstract_declarator: LBRAC . RBRAC
   82                    | LBRAC . expression RBRAC

    INC        shift, and go to state 28
    DEC        shift, and go to state 29
    L_NOT      shift, and go to state 30
    ID         shift, and go to state 64
    FLOAT_VAL  shift, and go to state 40
    INT_VAL    shift, and go to state 41
    STR_VAL    shift, and go to state 42
    CHAR_VAL   shift, and go to state 43
    SIZEOF     shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    LPAR       shift, and go to state 47
    RBRAC      shift, and go to state 134
    AMPER      shift, and go to state 50

    expression      go to state 135
    unary_operator  go to state 52


State 70

   59 declarator: declarator . LBRAC expression RBRAC
   60           | declarator . LBRAC RBRAC
   61           | declarator . LPAR parameter_list RPAR
   62           | declarator . LPAR identifier_list RPAR
   63           | declarator . LPAR RPAR
   73 parameter_declaration: declaration_specifiers declarator .

    LPAR   shift, and go to state 136
    LBRAC  shift, and go to state 137

    $default  reduce using rule 73 (parameter_declaration)


State 71

   74 parameter_declaration: declaration_specifiers abstract_declarator .
   83 abstract_declarator: abstract_declarator . LBRAC RBRAC
   84                    | abstract_declarator . LBRAC expression RBRAC
   87                    | abstract_declarator . LPAR RPAR
   88                    | abstract_declarator . LPAR parameter_list RPAR

    LPAR   shift, and go to state 138
    LBRAC  shift, and go to state 139

    $default  reduce using rule 74 (parameter_declaration)


State 72

   68 function_declarator: function_declarator LPAR parameter_list RPAR .

    $default  reduce using rule 68 (function_declarator)


State 73

   72 parameter_list: parameter_list COMMA . parameter_declaration

    CHAR   shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    declaration_specifiers  go to state 24
    type_specifier          go to state 6
    parameter_declaration   go to state 140


State 74

   69 function_declarator: function_declarator LPAR identifier_list RPAR .

    $default  reduce using rule 69 (function_declarator)


State 75

   77 identifier_list: identifier_list COMMA . ID

    ID  shift, and go to state 141


State 76
